--- a/less/explainer.less
+++ b/less/explainer.less
@@ -1,5 +1,6 @@
 .explainer-content {
   border: 2px solid purple;
+  width: 100%;
 }
 
 .explainer-titles {
