--- a/less/how-it-works.less
+++ b/less/how-it-works.less
@@ -3,6 +3,7 @@
   border: 2px solid blue;
   display: flex;
   padding: 10% 0;
+  width: 100%;
 }
 
 .iphone-vector {
@@ -17,7 +18,8 @@ div {
 .works-titles {
   border: 2px solid blue;
   color: white;
-  margin-left: 15%;
+  margin-left: 10%;
+  width: 40%;
 
   h1 {
     padding: 10% 0;
